--- a/Clase_I_Python.ipynb
+++ b/Clase_I_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPjB6oloLiCcrmh3Lm14Nzh",
+      "authorship_tag": "ABX9TyPhbEj2/gBxng3mMmxRH+P2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2587,7 +2587,7 @@
       "metadata": {
         "id": "XxxiUHWz0gLz"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2620,7 +2620,7 @@
       "metadata": {
         "id": "LWUJ4Q2X0wDK"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2668,7 +2668,7 @@
         "id": "yaIX5JFx1EMU",
         "outputId": "0aa48b42-1dc7-4f56-fa86-a251828b5494"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2721,7 +2721,7 @@
         "id": "mYv_xVUg2qK7",
         "outputId": "93e563a4-89ad-4eba-c06d-6a084907d141"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2758,7 +2758,7 @@
         "id": "nWGHEWFv3HLs",
         "outputId": "95a50800-2352-488f-a1b3-5de90305a936"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2795,7 +2795,7 @@
         "id": "pRWjeyUJ3I2T",
         "outputId": "0d94cedd-47da-4666-b276-a57539208836"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2828,7 +2828,7 @@
       "metadata": {
         "id": "jrEUnM5H3Kez"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2843,7 +2843,7 @@
         "id": "_hAeszlI3LIr",
         "outputId": "ae5c58d4-1394-47ac-cca8-d1dfe2e4b772"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2865,7 +2865,7 @@
       "metadata": {
         "id": "p50uE4nv3L9N"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2880,7 +2880,7 @@
         "id": "a_wRbukA3uUL",
         "outputId": "52697438-1107-4159-84a1-3f54c74cb015"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2902,7 +2902,7 @@
       "metadata": {
         "id": "7hheiRb_3NNT"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2917,7 +2917,7 @@
         "id": "lFY-pbWV3v1L",
         "outputId": "4690c32b-e6f5-4fb3-8a6f-09b4db4aea71"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2944,7 +2944,7 @@
         "id": "vQbtV79o3OLD",
         "outputId": "d00e72e4-36a2-4c19-ed60-3d49ce7af040"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3066,7 +3066,7 @@
         "id": "9RLctL1G6NRr",
         "outputId": "c396b067-337b-4f57-a864-321a973839b3"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3090,7 +3090,7 @@
       "metadata": {
         "id": "it2f_2Yw6Qcc"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3105,7 +3105,7 @@
         "id": "aee8N0006RKL",
         "outputId": "57e7b841-1605-438a-b6d8-dd00615c16ec"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3131,7 +3131,7 @@
         "id": "HbjT9Irp6WTT",
         "outputId": "674e8e6c-e483-4d25-8f57-f524af6252ea"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3156,7 +3156,7 @@
       "metadata": {
         "id": "wXbMttC56toj"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3171,7 +3171,7 @@
         "id": "oBcxi4tw7D_T",
         "outputId": "6fdbebaa-21d0-4be9-89a3-c146df664b67"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3267,7 +3267,7 @@
         "id": "jwEjFIfP8vyM",
         "outputId": "5e060fa9-fab8-4b93-eec9-df0e3c55958c"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3311,7 +3311,7 @@
         "id": "Ln1-XQj283Z8",
         "outputId": "f3cfc4a9-a553-44aa-e03e-8ff55b074377"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3337,7 +3337,7 @@
         "id": "SvIGdfP69Nn9",
         "outputId": "e07049e0-1e60-42dd-d077-29b72a9f8ffe"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3372,7 +3372,7 @@
         "id": "xEscfrSX9elN",
         "outputId": "8fae5368-7d10-4f9d-fdf2-7109f485cfa9"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3385,6 +3385,78 @@
           "execution_count": 106
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#EJERCICIOS"
+      ],
+      "metadata": {
+        "id": "_dcS4tSq_80L"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "+ Qué pasa si hacemos x = y = 5?"
+      ],
+      "metadata": {
+        "id": "mKfod7Cd_8qL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "+ ¿Cómo puedo obtener la longitud de una cadena?"
+      ],
+      "metadata": {
+        "id": "P2xW_UYj__LL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "+ Escribe una función que devuelva la raiz cuadrada de un número en caso de que sea par."
+      ],
+      "metadata": {
+        "id": "3FuIYaexAF3b"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "+ Obtén el resultado de aplicar la última función a un rango de número de 0 a 20. (_pista: usa `range()` y un loop `for`_)."
+      ],
+      "metadata": {
+        "id": "dlTGHDThAEaF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "+ Escriba una función que tome una cadena como parámetro e imprima la cadena con espacios."
+      ],
+      "metadata": {
+        "id": "-QfxLK8gALaz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Listas\n",
+        "\n",
+        "+ Crea una lista de tres elementos cada uno \n",
+        "+ Devuelve el contenido y la longitud de la primera\n",
+        "+ Haz una lista `l` con elementos del 1 al 100\n",
+        "+ Selecciona los primeros 10 elementos\n",
+        "+ Suma 3 a cada elemento\n",
+        "+ Eleva al cuadrado a los elementos impares y nombra el resultado como `l_sq`\n",
+        "+ Divide cada elemento por 5 si es divisible por 5 y nombra el resultado como `l_div`\n",
+        "+ Haz una nueva lista que contenga los diferentes elementos de `l_sq` y `l_div`"
+      ],
+      "metadata": {
+        "id": "1zrlIInhAPcL"
+      }
     }
   ]
 }
